--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "atom": ">=1.0.0"
   },
   "dependencies": {
-    "autoprefixer": ">=6.3.1",
-    "postcss": ">=5.0.14",
-    "postcss-scss": ">=0.3.0",
-    "postcss-sorting": ">=1.6.1"
+    "autoprefixer": ">6.3.0",
+    "postcss": ">5.0.0",
+    "postcss-scss": ">0.3.0",
+    "postcss-sorting": ">3.0.0"
   }
 }
