--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "atom": ">=1.0.0"
   },
   "dependencies": {
-    "autoprefixer": ">6.3.0",
-    "postcss": ">5.0.0",
-    "postcss-scss": ">0.3.0",
-    "postcss-sorting": ">3.0.0"
+    "autoprefixer": "^8.6.5",
+    "postcss": "^6.0.23",
+    "postcss-scss": "^1.0.6",
+    "postcss-sorting": "^3.1.0"
   }
 }
