--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sass-code-kit",
   "main": "./lib/sass-code-kit",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "description": "Compile Sass and Prefix CSS",
   "keywords": [
     "css",
@@ -16,9 +16,10 @@
     "atom": ">=1.0.0"
   },
   "dependencies": {
-    "autoprefixer": "^8.6.5",
-    "postcss": "^6.0.23",
-    "postcss-scss": "^1.0.6",
-    "postcss-sorting": "^3.1.0"
+    "node-sass": "^4.9.0",
+    "autoprefixer": "^9.0.0",
+    "postcss": "^7.0.0",
+    "postcss-scss": "^2.0.0",
+    "postcss-sorting": "^4.0.0"
   }
 }
