--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
     "name": "sass-code-kit",
     "main": "./lib/sass-code-kit",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Compile Sass and Prefix CSS",
-    "keywords": ["css", "scss", "sass", "prefix", "prefixer"],
-    "activationHooks": ["language-sass:grammar-used"],
+    "keywords": [
+        "css",
+        "scss",
+        "sass",
+        "prefix",
+        "prefixer"
+    ],
+    "activationHooks": [
+        "language-sass:grammar-used"
+    ],
     "repository": "https://github.com/flyzto/sass-code-kit",
     "license": "MIT",
     "engines": {
