--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "atom": ">=1.0.0"
     },
     "dependencies": {
-        "autoprefixer": "~9.7.0",
-        "postcss": "~7.0.0",
-        "postcss-scss": "~2.0.0",
-        "postcss-sorting": "~5.0.0",
-        "sass": "~1.5.0"
+        "autoprefixer": "^9.7.6",
+        "postcss": "^7.0.34",
+        "postcss-scss": "^2.0.0",
+        "postcss-sorting": "^5.0.1",
+        "sass": "^1.26.11"
     }
 }
